change in style and content

--- a/admission/phd.html
+++ b/admission/phd.html
@@ -1,43 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>PhD Admission</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-<div id="navbar"></div>
-<section class="bg-danger text-white py-5 text-center">
-  <h1>PhD Admission</h1>
-  <p>Research Programs</p>
-</section>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Ph.D. Admission</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<div class="container py-5">
-  <h3>PhD Departments</h3>
-  <ul class="list-group mb-4">
-    <li class="list-group-item">Computer Science</li>
-    <li class="list-group-item">Mechanical Engineering</li>
-    <li class="list-group-item">Physics</li>
-    <li class="list-group-item">Management</li>
-  </ul>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
-  <h3>Eligibility</h3>
-  <p>Postgraduate degree with minimum required percentage.</p>
+    <style>
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        background: #f8f9fa;
+      }
+      
+      .info-box {
+        background: white;
+        border-radius: 8px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        margin-bottom: 30px;
+      }
+      .table-bordered th,
+      .table-bordered td {
+        vertical-align: middle;
+      }
+      .download-links a {
+        display: block;
+        margin: 8px 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="navbar"></div>
+    <section class="py-5 bg-primary text-center text-white">
+      <h1>Ph.D. Admission - Sambalpur University</h1>
+      <p>Academic Session <strong>2025-26</strong></p>
+    </section>
+    <div class="container">
+      <!-- IMPORTANT DATES -->
+      <div class="info-box">
+        <h3 class="section-title">Important Dates</h3>
+        <div class="table-responsive">
+          <table class="table table-bordered table-striped">
+            <thead class="table-dark">
+              <tr>
+                <th style="width: 70%">Event</th>
+                <th style="width: 30%">Date</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Commencement of Online Registration</td>
+                <td><strong>27 Oct 2025</strong></td>
+              </tr>
+              <tr>
+                <td>Last date of Online Registration</td>
+                <td><strong>16 Nov 2025</strong></td>
+              </tr>
+              <tr>
+                <td>Hard copy submission deadline</td>
+                <td><strong>19 Nov 2025</strong></td>
+              </tr>
+              <tr>
+                <td>Publication of valid applicants list</td>
+                <td><strong>28 Nov 2025</strong></td>
+              </tr>
+              <tr>
+                <td>Admit card release</td>
+                <td><strong>05 Dec 2025</strong></td>
+              </tr>
+              <tr>
+                <td>Viva-Voce Date</td>
+                <td><strong>08 Dec 2025</strong></td>
+              </tr>
+              <tr>
+                <td>Result Publication</td>
+                <td><strong>16 Dec 2025</strong></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
 
-  <h3>Admission Procedure</h3>
-  <ol>
-    <li>Entrance Test</li>
-    <li>Research Proposal Submission</li>
-    <li>Interview</li>
-  </ol>
+      <!-- COURSES OFFERED -->
+      <div class="info-box">
+        <h3 class="section-title">Available Subjects</h3>
+        <div class="table-responsive">
+          <table class="table table-bordered table-striped">
+            <thead class="table-dark">
+              <tr>
+                <th>#</th>
+                <th>Subject</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Anthropology</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Biotechnology & Bioinformatics</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Chemistry</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>Commerce</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>Computer Science & Engineering</td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>Economics</td>
+              </tr>
+              <tr>
+                <td>7</td>
+                <td>Education</td>
+              </tr>
+              <tr>
+                <td>8</td>
+                <td>Electrical & Electronics Engg.</td>
+              </tr>
+              <tr>
+                <td>9</td>
+                <td>English</td>
+              </tr>
+              <tr>
+                <td>10</td>
+                <td>History</td>
+              </tr>
+              <!-- add more as needed -->
+            </tbody>
+          </table>
+        </div>
+      </div>
 
-  <a href="#" class="btn btn-warning mt-3">Apply for PhD</a>
-</div>
+      <!-- PROCEDURE -->
+      <div class="info-box">
+        <h3 class="section-title">Admission Procedure</h3>
+        <ol>
+          <li>Download the Ph.D. program notification.</li>
+          <li>Pay the application fee via State Bank Collect.</li>
+          <li>Register with the application number.</li>
+          <li>Complete the online application form.</li>
+          <li>Submit hard copies of documents to the University.</li>
+          <li>Download viva/viva voce admit card from your account.</li>
+        </ol>
+      </div>
 
-<div id="footer"></div>
+      <!-- DOWNLOADS -->
+      <div class="info-box">
+        <h3 class="section-title">Important Downloads</h3>
+        <div class="download-links">
+          <a href="#" class="btn btn-outline-primary"
+            >Download Ph.D. Admission Notification (PDF)</a
+          >
+          <a href="#" class="btn btn-outline-secondary"
+            >Download Undertaking Form</a
+          >
+        </div>
+      </div>
+
+      <!-- CONTACT HELP -->
+      <div class="info-box text-center">
+        <p>
+          Need Help? Email:
+          <a href="mailto:onlineadm@suniv.ac.in">onlineadm@suniv.ac.in</a>
+        </p>
+      </div>
+    </div>
+    <div id="footer"></div>
+    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../script.js"></script>
-
-</body>
+  </body>
 </html>
